[tool.poetry]
name = "dumplse"
version = "0.2.0"
description = "Dump share chat data from LSE"
authors = ["tomtastic"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
bs4 = "^0.0.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
