[tool.poetry]
name = "dumplse"
version = "0.2.0"
description = "Dump share chat data from LSE"
authors = ["tomtastic"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12"
colorama = "^0.4.4"
requests = "^2.26.0"
halo = "^0.0.31"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = "^20.8b1"
types-beautifulsoup4 = "^4.12"
types-colorama = "^0.4.15"
types-requests = "^2.30"
types-python-dateutil = "^2.9.0"

[tool.mypy]
python_executable = "/opt/homebrew/bin/python3"
disallow_untyped_defs = "True"
disallow_untyped_calls = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
