[project]
name = "dumplse"
version = "0.2.0"
readme = "README.md"
description = "Dump share chat data from LSE"
authors = [
    {name = "tomtastic"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "undetected_chromedriver>=3.5.5",
    "selenium_stealth>=1.0.6",
    "beautifulsoup4<5.0,>=4.12",
    "colorama<1.0.0,>=0.4.4",
    "requests<3.0.0,>=2.26.0",
    "halo<1.0.0,>=0.0.31",
]

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.9.0",
    "black<21.0,>=20.8b1",
    "types-beautifulsoup4<5.0,>=4.12",
    "types-colorama<1.0.0,>=0.4.15",
    "types-requests<3.0,>=2.30",
    "types-python-dateutil<3.0.0,>=2.9.0",
]

[tool.uv]
default-groups = []

[tool.mypy]
python_executable = "/opt/homebrew/bin/python3"
disallow_untyped_defs = "True"
disallow_untyped_calls = "True"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
